Portfolio layout and images added

--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
                 </div>
             </div>
         </div>
-
-
+    </div>
+    <div class="card">
+        <div class="card-body">
+          <p class="card-text">Copywrite McGinley 2020</p>
+        </div>
+        <img src="C:\Users\mason\Pictures\Camera Roll/darkgrey.jpg" class="card-img-top" alt="Gray border">
     </div>
 
 
