--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,79 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <nav class="navbar navbar-light" style="background-color: #c3d4e0;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">About</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                         <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </nav>
+    <div class= "container">
+        <div class="card">
+            <div class="card-body">
+              Portfolio
+            </div>
+        </div>
+    </div>
+   <div class="container">
+        <div class="row row-cols-1 row-cols-md-3">
+            <div class="col mb-4">
+                <div class="card h-100">
+                    <img src="C:\Users\mason\Pictures\Camera Roll/wordguess.png" class="card-img-top" alt="Word Guess">
+                    <div class="card-body">
+                        <h5 class="card-title">Word Guess</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-4">
+                <div class="card h-100">
+                    <img src="C:\Users\mason\Pictures\Camera Roll/trivia.png" class="card-img-top" alt="Trivia Game">
+                    <div class="card-body">
+                        <h5 class="card-title">Trivia Game</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-4">
+                <div class="card h-100">
+                    <img src="C:\Users\mason\Pictures\Camera Roll/rpg-1.jpg" class="card-img-top" alt="RPG">
+                    <div class="card-body">
+                        <h5 class="card-title">RPG Game</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-4">
+                <div class="card h-100">
+                   <img src="C:\Users\mason\Pictures\Camera Roll/infowidget.jpg" class="card-img-top" alt="Info Widget">
+                   <div class="card-body">
+                       <h5 class="card-title">Info Widget</h5>
+                   </div>
+               </div>
+           </div>
+           <div class="col mb-4">
+            <div class="card h-100">
+               <img src="C:\Users\mason\Pictures\Camera Roll/rock-paper-scissors-items.png" class="card-img-top" alt="Rock Paper Scissors">
+               <div class="card-body">
+                   <h5 class="card-title">Rock Paper Scissors</h5>
+               </div>
+           </div>
+       </div>
+        </div>
+
+    </div> 
+
+
+
 </body>
 </html>
