styling touch ups were made to all pages

--- a/index.html
+++ b/index.html
@@ -3,61 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel= "stylesheet" type= "text/CSS" href= "style.css">
 </head>
 
 <body>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    
-    <nav class="navbar navbar-light" style="background-color: #c3d4e0;">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">About</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                         <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </nav>
-    <div class= "container">
-        <div class="card">
-            <div class="card-body">
-              Mason McGinley
-            </div>
-        </div>
-    </div>
-    <div class= "container">    
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    <img src="C:\Users\mason\Pictures\Camera Roll/cow.jpg.jpg" class="card-img" alt="Fluffy Cows">
+    <div class="wrapper">
+        <nav class="navbar navbar-light" style="background-color: #c3d4e0;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">About</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">About Me</h5>
-                        <p class="card-text">My name is Mason and I am a 25 year old Colorado native, who currently lives in Firestone. I have a dog named Tucker who is my best pal. I am a huge basketball fan. The Boston Celtics is my favorite team in the NBA. Cows, especially fluffy ones are my favorite animal. I am a huge donut connoisseur. There are very few things better than a fruity donut and a good bourbon. Finally tasteful dad jokes are regular part of my daily vocabulary. </p>
-                        <p class="card-text"><small class="text-muted">Whats the difference between an old bus station and a lobster with a boob job?</small></p>
-                        <p class="card-text"><small class="text-muted">Ones a crusty bus station and the other is a busty crustacean</small></p>
+            </nav>
+        </nav>
+        <div class= "container">
+            <h2>Mason McGinley</h2>
+        </div>
+        <div class= "container">    
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="C:\Users\mason\Pictures\Camera Roll/cow.jpg.jpg" class="card-img" alt="Fluffy Cows">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">About Me</h5>
+                            <p class="card-text">My name is Mason and I am a 25 year old Colorado native, who currently lives in Firestone. I have a dog named Tucker who is my best pal. I am a huge basketball fan. The Boston Celtics is my favorite team in the NBA. Cows, especially fluffy ones are my favorite animal. I am a huge donut connoisseur. There are very few things better than a fruity donut and a good bourbon. Finally tasteful dad jokes are regular part of my daily vocabulary. </p>
+                            <p class="card-text"><small class="text-muted">Whats the difference between an old bus station and a lobster with a boob job?</small></p>
+                            <p class="card-text"><small class="text-muted">Ones a crusty bus station and the other is a busty crustacean</small></p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="card">
-        <div class="card-body">
-          <p class="card-text">Copywrite McGinley 2020</p>
+        <div class="card">
+            <div class="card-body">
+                <footer>Copywrite McGinley 2020</footer>
+            </div>
         </div>
-        <img src="C:\Users\mason\Pictures\Camera Roll/darkgrey.jpg" class="card-img-top" alt="Gray border">
     </div>
-
 
 </body>
 </html>
