Final styling changes and ReadMe

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <div class="wrapper">
+        <div class= "container">
+            <h2>Mason McGinley</h2>
+        </div>
         <nav class="navbar navbar-light" style="background-color: #c3d4e0;">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">About</a>
@@ -29,10 +32,7 @@
                 </div>
             </nav>
         </nav>
-        <div class= "container">
-            <h2>Mason McGinley</h2>
-        </div>
-        <div class= "container">    
+        <main class= "container">    
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
         <div class="card">
             <div class="card-body">
                 <footer>Copywrite McGinley 2020</footer>
