--- a/contact.html
+++ b/contact.html
@@ -1,59 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!--Head of HTML with links to stylesheets.-->
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <title>Contact</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel= "stylesheet" type= "text/CSS" href= "style.css">
 </head>
+
+<!--Navbar with links to index page, portfolio, and contact pages -->
+
 <body>
-    <div class="wrapper">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <div class="container">
-            <h2>Mason McGinley</h2>
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+        <span class="navbar-brand mb-0 h1">Mason McGinley</span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
         </div>
-        <nav class="navbar navbar-light" style="background-color: #c3d4e0;">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">About</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </nav>
-       
-        <div class= "container">
-            <form>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Name</label>
-                    <input type="Name" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-            </form>
-        </div>
+      </nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Contact</h1>
+      </div>
     </div>
-    <div class="card">
-        <div class="card-body">
-            <footer>Copywrite McGinley 2020</footer>
+
+<!--Placeholder for future "contact me" form -->
+
+      <div class="row">
+        <div class="col-md-12">
+          <form action="/action_page.php">
+            <div class="form-group">
+              <label for="usr">Name:</label>
+              <input type="text" class="form-control" id="usr">
+            </div>
+            <div class="form-group">
+              <label for="email">Email address:</label>
+              <input type="email" class="form-control" placeholder="Enter email" id="email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="comment">Comment:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+            </div>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </form>
+        </div> 
+      </div> 
+
+<!--Links to my various social media and professional pages.-->
+
+      <div class="row">
+        <div class="col-md-12">
+          <h4>Connect with me on social media!</h4>
         </div>
-    </div>
+      </div>
+      <div class="row justify-content-center">
+          <a href="https://www.linkedin.com/in/mason-mcginley-39220a188/" target="_blank" class="fa fa-linkedin"></a>
+          <a href="https://github.com/mmcginley32" target="_blank" class="fa fa-github"></a>
+        </div>
+      </div>
+
+<!--JavaScript and jQuery links.-->
+
+  <footer>&copy;2020 Mason McGinley</footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 </body>
 </html>
