--- a/index.html
+++ b/index.html
@@ -1,60 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!--Head of document with stylesheet links-->
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel= "stylesheet" type= "text/CSS" href= "style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <title>About Me</title>
 </head>
 
+<!--Navbar to navigate to home (index.html) page, portfolio page, and contact page-->
+
 <body>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <div class="wrapper">
-        <div class= "container">
-            <h2>Mason McGinley</h2>
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+        <span class="navbar-brand mb-0 h1">Mason McGinley</span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-        <nav class="navbar navbar-light" style="background-color: #c3d4e0;">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">About</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </nav>
-        <main class= "container">    
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img src="C:\Users\mason\Pictures\Camera Roll/cow.jpg.jpg" class="card-img" alt="Fluffy Cows">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">About Me</h5>
-                            <p class="card-text">My name is Mason and I am a 25 year old Colorado native, who currently lives in Firestone. I have a dog named Tucker who is my best pal. I am a huge basketball fan. The Boston Celtics is my favorite team in the NBA. Cows, especially fluffy ones are my favorite animal. I am a huge donut connoisseur. There are very few things better than a fruity donut and a good bourbon. Finally tasteful dad jokes are regular part of my daily vocabulary. </p>
-                            <p class="card-text"><small class="text-muted">Whats the difference between an old bus station and a lobster with a boob job?</small></p>
-                            <p class="card-text"><small class="text-muted">Ones a crusty bus station and the other is a busty crustacean</small></p>
-                        </div>
-                    </div>
-                </div>
+      </nav>
+
+<!--Bio information with picture, links to LinkedIn and GitHub, and resume link-->
+
+    <div class="container">
+      <div class="row">
+            <div class="col-md-12">
+                <h1>About Mason McGinley</h1>
             </div>
-        </main>
-        <div class="card">
-            <div class="card-body">
-                <footer>Copywrite McGinley 2020</footer>
+
+        <div class="row">
+          <div class="col-md-12 text-wrap">
+            <div class="col-md-4 float-left">
+            <img src="./assets/headshot.jpg" class="img-fluid" alt="headshot">
             </div>
+              <p>Hello, and welcome to my portfolio. My name is Mason McGinley. I'm currently a coding student for the University of Denver's Full Stack Coding Boot Camp. When I am not in school, I work full time as a broker at iTrade Colorado. I am a Colorado native, who is a hug basketball fan. I enjoy staying active and doing anything with my dog! Currently I have leanred many languages in coding including but not limited to: HTML, CSS, JavaScript, JQuery, AJAX, Node.js, Heroku, MYSQL, REACT.js, API's, and so much more! Please, take a moment to look at my portfolio page where you can see some of the various projects I have worked on with the skills I have learned from the University of Denver so far. If you have any questions, I can be reached by phone or email.
+              <br>
+              <br>
+              <a href="mailto:masonmcginley32@gmail.com">masonmcginley32@gmail.com</a>
+              <br>
+              <a href="tel:303-551-3487">303.551.3487</a>
+              </p> 
+          </div>
         </div>
+        
+      </div> 
+      <div class="row">
+        <div class="col-md-12">
+        <h2>Links to My Pages</h2>
+        </div>
+      </div>
+      <div class="row justify-content-md-center">
+        <a href="https://github.com/mmcginley32" target="_blank"><button type="button" class="btn btn-primary">GitHub</button></a>
+        <a href="https://www.linkedin.com/in/mason-mcginley-39220a188/" target="_blank"><button type="button" class="btn btn-primary">LinkedIn</button></a>
+        <a href="./assets/Mason_McGinley_Resume_2020.PDF" target="_blank"><button type="button" class="btn btn-primary">Resume</button></a>
+        </div>
+      </div>
     </div>
+
+<!--JavaScript and jQuery links-->
+
+    <footer>&copy;2020 Mason McGinley</footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 </body>
 </html>
