--- a/portfolio.html
+++ b/portfolio.html
@@ -1,90 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+ 
+<!--Head of HTML with stylesheet links-->
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="reset.css">
-    <link rel= "stylesheet" type= "text/CSS" href= "style.css">
 </head>
+
+<!--Navbar with links to index.html, portfolio, and contact pages.-->
+
 <body>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <div class="wrapper">
-        <div class= "container">
-            <h2>Portfolio</h2>
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+        <span class="navbar-brand mb-0 h1">Mason McGinley</span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-        <nav class="navbar navbar-light" style="background-color: #c3d4e0;">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">About</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </nav>   
-        <div class="container">
-            <main>
-                <div class="row row-cols-1 row-cols-md-3">
-                    <div class="col mb-4">
-                        <div class="card h-100">
-                            <img src="C:\Users\mason\Pictures\Camera Roll/wordguess.png" class="card-img-top" alt="Word Guess">
-                            <div class="card-body">
-                                <h5 class="card-title">Word Guess</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-4">
-                        <div class="card h-100">
-                            <img src="C:\Users\mason\Pictures\Camera Roll/trivia.png" class="card-img-top" alt="Trivia Game">
-                            <div class="card-body">
-                                <h5 class="card-title">Trivia Game</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-4">
-                        <div class="card h-100">
-                            <img src="C:\Users\mason\Pictures\Camera Roll/rpg-1.jpg" class="card-img-top" alt="RPG">
-                            <div class="card-body">
-                                <h5 class="card-title">RPG Game</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-4">
-                        <div class="card h-100">
-                            <img src="C:\Users\mason\Pictures\Camera Roll/infowidget.jpg" class="card-img-top" alt="Info Widget">
-                            <div class="card-body">
-                                <h5 class="card-title">Info Widget</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col mb-4">
-                        <div class="card h-100">
-                            <img src="C:\Users\mason\Pictures\Camera Roll/rock-paper-scissors-items.png" class="card-img-top" alt="Rock Paper Scissors">
-                            <div class="card-body">
-                                <h5 class="card-title">Rock Paper Scissors</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </main>    
-        </div>
-        <div class="card">
-            <div class="card-body">
-                <footer>Copywrite McGinley 2020</footer>
+      </nav>
+
+<!--Link to various portfolio projects deployed in GitHub.-->
+
+      <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Portfolio</h1>
             </div>
         </div>
-    </div> 
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card">
+              <a href="https://mmcginley32.github.io/project1/index.html" target="_blank">
+              <img src="./assets/weatherTrips.PNG" class="img" alt="Weather Trips">
+              <h3>Weather Trips</h3>
+              </a>
+              <a href="https://github.com/mmcginley32/project1" target="_blank">GitHub Repo</a>
+            </div>
+            
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <a href="https://sleepy-eyrie-55325.herokuapp.com/" target="_blank">
+              <img src="./assets/BillBoards.PNG" class="img" alt="BillBoards">
+              <h3>BillBoards</h3>
+              </a>
+              <a href="https://github.com/mmcginley32/BillBoards" target="_blank">GitHub Repo</a>
+          </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <a href="https://mmcginley32.github.io/DayPlanner/" target="_blank">
+              <img src="./assets/DayPlanner.PNG" class="img" alt="Planner">
+              <h3>Day Planner</h3>
+              </a>
+              <a href="https://github.com/mmcginley32/DayPlanner" target="_blank">GitHub Repo</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <a href="https://protected-castle-13922.herokuapp.com/" target="_blank">
+              <img src="./assets/offlineBudget.PNG" class="img" alt="BlogMachine">
+              <h3>Progressive Budget</h3>
+              </a>
+              <a href="https://github.com/mmcginley32/Offline-Budget-Tracker" target="_blank">GitHub Repo</a>
+            </div>
+          </div>
+        </div> 
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card">
+              <a href="https://note-taker-mmdm.herokuapp.com/" target="_blank">
+              <img src="./assets/noteTaker.PNG" class="img" alt="Note">
+              <h3>Note Taker</h3>
+              </a>
+              <a href="https://github.com/mmcginley32/notetaker" target="_blank">GitHub Repo</a>
+          </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <a href="" target="_blank">
+              <img src="./assets/" class="img" alt="Fitness">
+              <h3>Fitness App</h3>
+              </a>
+              <a href="" target="_blank">GitHub Repo</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
+              <a href="" target="_blank">
+              <img src="./assets/" class="img" alt="Burger Builder">
+              <h3>Eat-Da-Burger!</h3>
+              </a>
+              <a href="https://github.com/mmcginley32/eat-the-burger" target="_blank">GitHub Repo</a>
+            </div>
+          </div>
+        </div>
+       </div>
 
+ <!--Links for JavaScript and jQuery scripts-->
 
+    <footer>&copy;2020 Mason McGinley</footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 </body>
 </html>
