--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <div class="col-md-4 float-left">
             <img src="./assets/headshot.jpg" class="img-fluid" alt="headshot">
             </div>
-              <p>Hello, and welcome to my portfolio. My name is Mason McGinley. I'm currently a coding student for the University of Denver's Full Stack Coding Boot Camp. When I am not in school, I work full time as a broker at iTrade Colorado. I am a Colorado native, who is a hug basketball fan. I enjoy staying active and doing anything with my dog! Currently I have leanred many languages in coding including but not limited to: HTML, CSS, JavaScript, JQuery, AJAX, Node.js, Heroku, MYSQL, REACT.js, API's, and so much more! Please, take a moment to look at my portfolio page where you can see some of the various projects I have worked on with the skills I have learned from the University of Denver so far. If you have any questions, I can be reached by phone or email.
+              <p>Hello, and welcome to my portfolio. My name is Mason McGinley. I'm currently a coding student for the University of Denver's Full Stack Coding Boot Camp. When I am not in school, I work full time as a broker at iTrade Colorado. I am a Colorado native, an avid basketball fan, and in my free time I enjoy the Colorado lifestyle by staying active with my pup Tucker.
+                Currently I have leanred many languages in coding including but not limited to: HTML, CSS, JavaScript, JQuery, AJAX, Node.js, Heroku, MYSQL, REACT.js, API's, and so much more! Please, take a moment to look at my portfolio page where you can see some of the various projects I have worked on with the skills I have learned from the University of Denver. If you have any questions, I can be reached by phone or email.
               <br>
               <br>
               <a href="mailto:masonmcginley32@gmail.com">masonmcginley32@gmail.com</a>
