--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,15 @@
         <div class="row">
           <div class="col-md-3">
             <div class="card">
+              <a href="https://brotein.herokuapp.com/" target="_blank">
+              <img src="./assets/brotien.PNG" class="img" alt="Fitness">
+              <h3>Brotein</h3>
+              </a>
+              <a href="https://github.com/jttilley/Brotein" target="_blank">GitHub Repo</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card">
               <a href="https://sleepy-eyrie-55325.herokuapp.com/" target="_blank">
               <img src="./assets/BillBoards.PNG" class="img" alt="BillBoards">
               <h3>BillBoards</h3>
@@ -90,15 +99,6 @@
               </a>
               <a href="https://github.com/mmcginley32/notetaker" target="_blank">GitHub Repo</a>
           </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <a href="" target="_blank">
-              <img src="./assets/" class="img" alt="Fitness">
-              <h3>Fitness App</h3>
-              </a>
-              <a href="" target="_blank">GitHub Repo</a>
-            </div>
           </div>
           <div class="col-md-3">
             <div class="card">
