--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div class="col-md-4 float-left">
             <img src="./assets/headshot.jpg" class="img-fluid" alt="headshot">
             </div>
-              <p>Hello, and welcome to my portfolio. My name is Mason McGinley. I'm currently a coding student for the University of Denver's Full Stack Coding Boot Camp. When I am not in school, I work full time as a broker at iTrade Colorado. I am a Colorado native, an avid basketball fan, and in my free time I enjoy the Colorado lifestyle by staying active with my pup Tucker.
-                Currently I have leanred many languages in coding including but not limited to: HTML, CSS, JavaScript, JQuery, AJAX, Node.js, Heroku, MYSQL, REACT.js, API's, and so much more! Please, take a moment to look at my portfolio page where you can see some of the various projects I have worked on with the skills I have learned from the University of Denver. If you have any questions, I can be reached by phone or email.
+              <p>Hello, and welcome to my portfolio. My name is Mason McGinley. I'm currently a QA Engineer at AdCellerant. I also am a TA through the University of California, Berkley for their full stack software program. I am a Colorado native, an avid basketball fan, and in my free time I enjoy doing anything that keeps me active.
+                I attended the University of Denver's full stack software development program where I learned a variety of languages. I am well versed in Javascript, React, node.js, API's, JQuery, MYSQL, Express, HTML, CSS, and bootstrap. Please, take a moment to look at my portfolio page where you can see some of the various projects I have worked on with the skills I have learned from the bootcamp. If you have any questions, I can be reached by phone or email.
               <br>
               <br>
               <a href="mailto:masonmcginley32@gmail.com">masonmcginley32@gmail.com</a>
@@ -67,7 +67,7 @@
       <div class="row justify-content-md-center">
         <a href="https://github.com/mmcginley32" target="_blank"><button type="button" class="btn btn-primary">GitHub</button></a>
         <a href="https://www.linkedin.com/in/mason-mcginley-39220a188/" target="_blank"><button type="button" class="btn btn-primary">LinkedIn</button></a>
-        <a href="./assets/Mason_McGinley_Resume_2020.PDF" target="_blank"><button type="button" class="btn btn-primary">Resume</button></a>
+        <a href="./assets/Mason_McGinley_Resume2021.pdf" target="_blank"><button type="button" class="btn btn-primary">Resume</button></a>
         </div>
       </div>
     </div>
